2009-05-11 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* UdpClient.cs: if possible, avoid DNS lookups when the host name is
	an IP address. Related to bug #502866.

2009-04-30 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Socket.cs: return the last error if a connect to multiple addresses
	fails.

2009-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Socket_2_1.cs: Use old-n-simple CheckProtocolSupport to implement
	OSSupportsIP[v4|v6] for Moonlight (NET_2_1 only) so we can avoid 
	including a bunch of types (22) from System.Net.NetworkInformation 
	and drop the number of [SecuritySafeCritical] methods to audit (the 
	same 22) and [SecurityCritical] (8) beside getting a smaller 
	System.Net.dll assembly :)

2009-04-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Socket.cs: End* methods can only be called once per IAsyncResult.
	Bug #466031 fixed.

2009-04-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Socket.cs: Split socket class into two files (this one and the
	new Socket_2_1.cs). This let us remove (some) existing #if in the
	sources and avoid (a lot) of new ones for Moonlight.
	* Socket_2_1.cs: Just enough of socket for NET_2_1. This helps
	the tuner not to bring a lot of extra stuff (some visible)
	into Moonlight.
	* SocketAsyncEventArgs.cs: Ifdef out some cases for NET_2_1 so 
	Moonlight can use it's own (smaller) SocketAsyncOperation enum

2009-02-17 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Socket.cs: instead of clearing the sockets form the output and then
	adding them back, we just remove the ones that have not been signaled.
	Fixes bug #354090 and bug #476138.

2009-01-19 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* Socket.cs: don't throw when there's no ipv6 configuration.

2009-01-09  Dick Porter  <dick@ximian.com>

	* Socket.cs: Special case 0-length receive requests in the
	BeginAccept overloads that wait for data, so they behave as the
	non-waiting version.  Seems to match MS behaviour, fixes bug
	464201.
